--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
+        "nesbot/carbon": "^2.68",
         "yajra/laravel-datatables-oracle": "^10.4"
     },
     "require-dev": {
